# ChangeLog for x11-libs/qt-core
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-libs/qt-core/ChangeLog,v 1.44 2009/04/28 15:32:47 jer Exp $

  28 Apr 2009; Jeroen Roovers <jer@gentoo.org> qt-core-4.4.2-r2.ebuild:
  Stable for HPPA (bug #263945).

*qt-core-4.5.1 (27 Apr 2009)

  27 Apr 2009; Markos Chandras <hwoarang@gentoo.org> +qt-core-4.5.1.ebuild:
  Version bump to 4.5.1

  15 Apr 2009; Brent Baude <ranger@gentoo.org> qt-core-4.4.2-r2.ebuild:
  Marking qt-core-4.4.2-r2 ppc64 for bug 263945

  11 Apr 2009; nixnut <nixnut@gentoo.org> qt-core-4.4.2-r2.ebuild:
  ppc stable #263945

  09 Apr 2009; Raúl Porcel <armin76@gentoo.org> qt-core-4.4.2-r2.ebuild:
  ia64/sparc stable wrt #263945

  05 Apr 2009; Tobias Klausmann <klausman@gentoo.org>
  qt-core-4.4.2-r2.ebuild:
  Stable on alpha, bug #263945

  05 Apr 2009; Markus Meier <maekke@gentoo.org> qt-core-4.4.2-r2.ebuild:
  amd64/x86 stable, bug #263945

  18 Mar 2009; Markos Chandras <hwoarang@gentoo.org>
  -qt-core-4.5.0_rc1.ebuild:
  Dropping 4.5.0_rc1

  17 Mar 2009; Raúl Porcel <armin76@gentoo.org> qt-core-4.5.0.ebuild:
  Add ~arm wrt #262462

*qt-core-4.5.0 (04 Mar 2009)

  04 Mar 2009; Ben de Groot <yngwin@gentoo.org> +qt-core-4.5.0.ebuild:
  Version bump

  25 Feb 2009; Markos Chandras <hwoarang@gentoo.org>
  -qt-core-4.4.2-r1.ebuild, qt-core-4.4.2-r2.ebuild,
  qt-core-4.5.0_rc1.ebuild:
  Dropping qt-core-4.4.2-r1 ebuild, added iconv use flag ( bug #260145 )

  21 Feb 2009; Markos Chandras <hwoarang@gentoo.org>
  qt-core-4.5.0_rc1.ebuild:
  Fixing bug #259736

  18 Feb 2009; Jeroen Roovers <jer@gentoo.org> qt-core-4.4.2.ebuild:
  Stable for HPPA (bug #248083).

  14 Feb 2009; Markos Chandras <hwoarang@gentoo.org>
  qt-core-4.5.0_rc1.ebuild:
  fixing src_prepare. Thanks to Arfrever

  14 Feb 2009; Markos Chandras <hwoarang@gentoo.org>
  qt-core-4.5.0_rc1.ebuild:
  Fixing bug #172219. Thanks to Arfrever Frehtes Taifersar Arahesis