@@ -13,7 +13,7 @@ DIST qt-x11-opensource-src-4.5.0.tar.bz2 113335010 RMD160 5714f2772ce358e6528ec1
 DIST qt-x11-opensource-src-4.5.1.tar.bz2 114667436 RMD160 702d7c6bb9787cd5602dcb8afce52bdfcfd52179 SHA1 50ba9b6d2eb7056e47dc53775be509c4ff6ec015 SHA256 b994c40e41386c9d82f025dd9198e1161717021216680adef97da3f1b8947c75
 EBUILD qt-core-4.4.2-r2.ebuild 5484 RMD160 d59532665194123f593d73bb9f1251b977220a1e SHA1 e1b9ed77733afdbeb0ff03d1dc77a7396a96bf1f SHA256 75f68ba3c82c468b3c2fd916632252ee1afd7bbc2c0b6e696c927f8218d55a43
 EBUILD qt-core-4.4.2.ebuild 5215 RMD160 3ba4a96c9f83e6ff3040c4eda719a1e99ae676ac SHA1 ede22651066cef7e54c9a67d9a52b3c4ffa73ab6 SHA256 2c1f8076e1299025326c7916e7fc2f4d749efbe7ce2e50759262554a4ff6b823
-EBUILD qt-core-4.5.0.ebuild 6035 RMD160 1398bd21ac807439835fb8487071abd0e9635471 SHA1 4726eb5b59e9faf56db50a79830d4c177261485c SHA256 47afb9252045f3e0c12b6fc4c0c5929ed3c5ce811b8ce0acbca733eb382fd9fc
-EBUILD qt-core-4.5.1.ebuild 6036 RMD160 6d915974a4586a32aea6e4de6c88043e62cef48e SHA1 36d7b017a864dde81cc364ce5b5c36053bd3be3f SHA256 7f467aad33744813645bd5b325758cd25b9c47c917e0f4a99389358948f2474a
-MISC ChangeLog 6057 RMD160 3e3e56e6983079c0e94081ad5032035f5e2617e8 SHA1 0fd3623561643b1e1775e480878abf0133b4013a SHA256 9aab31dddfae0d8736305518aca0ba2a9634e33c9a64882dd12bb3f321ca0659
+EBUILD qt-core-4.5.0.ebuild 6053 RMD160 e04e5610134dccb8f18d45ffaaf196f7839ee901 SHA1 809a3edda0b2ade33c7c8e505f39f53074f256b5 SHA256 d4ee78c7f783867514dff5ebc4af088b2b0c81271d1aaf85b3f6a01eb802bf06
+EBUILD qt-core-4.5.1.ebuild 6053 RMD160 69e5f750ff04baa80703c9b52b2ece4aec7bba9f SHA1 a7c1e1c313e3383337faef1721c9e78030ab4e64 SHA256 6e3f9228e310220ea6974d16a97bad3fbe4e5479ed6dc8a57ff273f3c4646ffb
+MISC ChangeLog 6206 RMD160 f3a2e8d21dd40a42d8b7590c2ed84df493c0fb97 SHA1 54c1953c0337171771c25c79e51c4271524924fe SHA256 a0feee1ddd261621b2a16258060cd9851032be8ee0ec542a3460156c445f80b5
 MISC metadata.xml 405 RMD160 7ad4cec9a392e8164062dae2935e2c59ba52b503 SHA1 104a2a88f1cf174e9e4827b639a73d79bd0fba2d SHA256 cce5d387ade0a1412bf70c58c7b0ab28fd488cc60e458ac66296ee632d893bf8
