@@ -1,6 +1,6 @@
 # Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/qt-core/qt-core-4.5.1.ebuild,v 1.1 2009/04/27 19:42:35 hwoarang Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/qt-core/qt-core-4.5.1.ebuild,v 1.2 2009/04/30 10:37:31 hwoarang Exp $
 
 EAPI=2
 inherit qt4-build
@@ -11,6 +11,7 @@ KEYWORDS="~amd64-linux ~x86-linux ~ppc-macos ~x86-macos"
 IUSE="doc +glib +iconv +qt3support +ssl"
 
 RDEPEND="sys-libs/zlib
+	x11-libs/libX11
 	glib? ( dev-libs/glib )
 	ssl? ( dev-libs/openssl )
 	!<x11-libs/qt-4.4.0:4"
